--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server": "nodemon app.js",
     "start": "concurrently 'yarn dev' 'yarn server' --names 'REACT,NODE' -c 'bgBlue.bold,bgMagenta.bold'",
     "start:fresh": "yarn reset:all && yarn start",
-    "build": "NODE_ENV='production' webpack -p --progress --colors",
+    "build": "NODE_ENV='production' webpack --progress --colors",
     "build:deploy": "yarn reset:all && yarn build",
     "reset:cache": "rm -rf dist/assets/build/* && rm -f dist/index.html",
     "reset:npm": "rm -rf node_modules && yarn",
@@ -73,6 +73,7 @@
     "sass-resources-loader": "^1.3.1",
     "style-loader": "^0.19.1",
     "svgo": "^1.0.3",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
