--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "server": "nodemon app.js",
     "start": "concurrently 'yarn dev' 'yarn server' --names 'REACT,NODE' -c 'bgBlue.bold,bgMagenta.bold'",
     "start:fresh": "yarn reset:all && yarn start",
-    "build": "NODE_ENV='production' webpack --progress --colors",
+    "build": "yarn && NODE_ENV='production' webpack --progress --colors",
     "build:deploy": "yarn reset:all && yarn build",
     "reset:cache": "rm -rf dist/assets/build/* && rm -f dist/index.html",
     "reset:npm": "rm -rf node_modules && yarn",
