--- a/package.json
+++ b/package.json
@@ -36,25 +36,25 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.35",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.35",
-    "@babel/plugin-syntax-decorators": "^7.0.0-beta.35",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
-    "@babel/preset-react": "^7.0.0-beta.35",
-    "@babel/preset-stage-0": "^7.0.0-beta.35",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "8.0.0-beta.0",
+    "@babel/cli": "^7.0.0-beta.38",
+    "@babel/core": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
+    "@babel/plugin-syntax-decorators": "^7.0.0-beta.38",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0-beta.38",
+    "@babel/preset-env": "^7.0.0-beta.38",
+    "@babel/preset-react": "^7.0.0-beta.38",
+    "@babel/preset-stage-0": "^7.0.0-beta.38",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "concurrently": "^3.5.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.9",
     "css-mqpacker": "^6.0.1",
     "dotenv": "^4.0.0",
-    "eslint": "^4.13.1",
+    "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.8.0",
@@ -65,9 +65,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "nodemon": "^1.13.3",
+    "nodemon": "^1.14.11",
     "postcss-assets-webpack-plugin": "^1.1.0",
-    "postcss-loader": "^2.0.9",
+    "postcss-loader": "^2.0.10",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
@@ -75,7 +75,7 @@
     "svgo": "^1.0.3",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.11.0"
   },
   "repository": {
     "type": "git",
