update packages, some other small stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-.DS_Store
-/node_modules/
-.env
-.vscode
 
-/dist/*assets/build/
-/dist/index.html
+.env
+.DS_Store
+.vscode
+yarn-error.log
+
+ssl
+dist
+build
+*.build
+node_modules
+stats
+extra_stuff
+
+bundle.*
+*.min.
+x.js
