--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "author": "Zac Arellano",
   "license": "MIT",
   "version": "1.0.0",
-  "private": true,
   "main": "app.js",
   "engines": {
-    "node": ">= 7.6.0"
+    "node": ">= 9.0.0"
   },
   "scripts": {
     "dev": "env UV_THREADPOOL_SIZE=100 webpack-dev-server --progress --colors",
+    "dev:fresh": "yarn reset:all && yarn dev",
     "server": "nodemon app.js",
     "start": "concurrently 'yarn dev' 'yarn server' --names 'REACT,NODE' -c 'bgBlue.bold,bgMagenta.bold'",
     "start:fresh": "yarn reset:all && yarn start",
-    "build": "yarn && NODE_ENV='production' webpack --progress --colors",
+    "build": "NODE_ENV='production' webpack --progress --colors",
     "build:deploy": "yarn reset:all && yarn build",
     "reset:cache": "rm -rf dist/assets/build/* && rm -f dist/index.html",
     "reset:npm": "rm -rf node_modules && yarn",
@@ -24,59 +24,67 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "svg": "find dist/assets -name '*.svg' -type f -exec yarn svgo '{}' \\;",
-    "svgo": "svgo --config='{ \"plugins\": [{ \"removeTitle\": false },{ \"removeViewBox\": false }]}'"
+    "svgo": "svgo --config='{ \"plugins\": [{ \"removeTitle\": false },{ \"removeViewBox\": false }]}'",
+    "outdated:list": "yarn outdated",
+    "outdated:upgrade": "yarn upgrade-interactive"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-icons": "^2.2.7",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.38",
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.38",
-    "@babel/plugin-syntax-decorators": "^7.0.0-beta.38",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
-    "@babel/preset-react": "^7.0.0-beta.38",
-    "@babel/preset-stage-0": "^7.0.0-beta.38",
-    "babel-eslint": "^8.2.1",
+    "@babel/cli": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-syntax-decorators": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-flow": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "@babel/preset-stage-0": "^7.0.0-beta.44",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "concurrently": "^3.5.1",
-    "css-loader": "^0.28.9",
-    "css-mqpacker": "^6.0.1",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
+    "css-loader": "^0.28.11",
+    "css-mqpacker": "^6.0.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-flowtype": "^2.46.2",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.14.11",
+    "flow-bin": "^0.69.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3",
     "postcss-assets-webpack-plugin": "^1.1.0",
-    "postcss-loader": "^2.0.10",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
-    "style-loader": "^0.19.1",
-    "svgo": "^1.0.3",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0"
+    "postcss-loader": "^2.1.3",
+    "react-hot-loader": "^4.0.1",
+    "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.20.3",
+    "svgo": "^1.0.5",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-stats-plugin": "^0.2.1",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "repository": {
     "type": "git",
